--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   </head>
   <body>
     <main>
-      <img src="./img/dive.bucket.png" alt="" />
-      <img src="./img/pingvin.bucket.png" alt="" />
-      <img src="./img/seal.bucket.png" alt="" />
-      <img src="./img/polarbear.bucket.png" alt="" />
+      <img src="./img/dykare.webp" alt="" />
+      <img src="./img/pingvin.webp" alt="" />
+      <img src="./img/sal.webp" alt="" />
+      <img src="./img/isbjorn.webp" alt="" />
       <img src="./img/musse.bucket.png" alt="" />
       <img src="./img/peppapig.bucket.png" alt="" />
       <img src="./img/play.bucket.png" alt="" />
